# earthquakes

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: START_HERE.md  tasks.md
docs/decisions/: ADR-0001-initial-architecture.md
docs/design/: design.md  prediction.md
docs/research/: research-notes.md
docs/templates/: TASK-COMPLETION-TEMPLATE.md  TASK-KICKOFF-TEMPLATE.md
outputs/: map-sample.html  timeline-sample.html
scripts/: check_forecasts.py  check_forecasts_2023cap.py  compare_merged_vs_lobello.py
src/earthquakes/: __init__.py  cli.py  data_loader.py  predict.py  viz.py
