[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquakes"
version = "0.1.0"
description = "Explore + visualize + baseline-predict global earthquakes (1990-2023)."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
